separate range-based expressions into number/size variants